# json_parser

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: device_list.json  json_parser.py  legislators.json  network_devices.py  people.json  people_list.py  scratch.py
jsonparser/: json_parser.py
src/json_parser.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_get_args.py  test_json_parser.py
