[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[metadata]
name = json_parser
version = 0.0.1
author = Dale Wright
author_email = diverdale@gmail.com
description = Dynamic JSON json parser
long_description = file: README.md
url = https://github.com/diverdale/json_parser
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = sarc
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src