[tool.poetry]
name = "json-parser"
version = "0.0.1"
description = "Dynamic JSON parser"
authors = ["dalwrigh <dalwrigh@cisco.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
